--- a/src/main/resources/components/adminprodi/sidebar.fxml
+++ b/src/main/resources/components/adminprodi/sidebar.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox fx:id="sidebar" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="700.0" prefWidth="300.0" style="-fx-background-color: #052C65;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.prodi.SidebarController">
+<VBox fx:id="sidebarContainer" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="700.0" prefWidth="300.0" style="-fx-background-color: #052C65;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.prodi.SidebarController">
     <children>
         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
             <children>
@@ -25,7 +25,7 @@
                 </Label>
             </children>
         </HBox>
-        <Button fx:id="dashboardProdi" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Dashboard" textFill="WHITE">
+        <Button fx:id="btnDashboard" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnDashboardOnClicked" style="-fx-background-color: #052C65;" text="Dashboard" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
@@ -36,7 +36,7 @@
                 <Insets bottom="10.0" top="10.0" />
             </VBox.margin>
         </Button>
-        <Button fx:id="permintaanVerifSeluruh" alignment="TOP_LEFT" layoutX="10.0" layoutY="273.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnPermintaanVerifSeluruhOnClicked" style="-fx-background-color: #052C65;" text="Permintaan Verifikasi" textFill="WHITE">
+        <Button fx:id="btnRequestVerification" alignment="TOP_LEFT" layoutX="10.0" layoutY="273.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnRequestVerificationOnClicked" style="-fx-background-color: #052C65;" text="Permintaan Verifikasi" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
