--- a/src/main/resources/views/adminprodi/permintaan-verif-seluruh.fxml
+++ b/src/main/resources/views/adminprodi/permintaan-verif-seluruh.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.prodi.PermintaanVerifSeluruh">
+<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.prodi.PermintaanVerifSeluruh">
     <fx:include source="../../components/adminprodi/sidebar.fxml" />
-    <VBox alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" prefHeight="700.0" prefWidth="573.0">
+    <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" HBox.hgrow="ALWAYS">
         <children>
             <fx:include source="../../components/admin/topbar.fxml" />
             <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0">
@@ -40,7 +40,7 @@
                <Insets left="20.0" right="20.0" top="20.0" />
             </VBox.margin>
             <children>
-               <VBox prefHeight="100.0" prefWidth="278.0">
+               <VBox prefHeight="20.0" prefWidth="335.0">
                   <children>
                      <Label text="Seluruh Permintaan">
                         <font>
@@ -48,13 +48,13 @@
                         </font></Label>
                   </children>
                </VBox>
-               <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="278.0">
+               <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="20.0" prefWidth="352.0" HBox.hgrow="ALWAYS">
                   <children>
                      <Label text="Sort">
                         <font>
                            <Font name="System Bold" size="14.0" />
                         </font></Label>
-                     <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                     <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                         <image>
                            <Image url="@../../img/arrow-down-up.png" />
                         </image>
@@ -63,13 +63,14 @@
                </HBox>
             </children>
          </HBox>
-            <TableView prefHeight="400.0" prefWidth="200.0">
+            <TableView fx:id="tableViewBerkasProdi" VBox.vgrow="ALWAYS">
                 <columns>
-                    <TableColumn prefWidth="75.0" text="NIM" />
-                    <TableColumn prefWidth="75.0" text="Mahasiswa" />
-                    <TableColumn prefWidth="75.0" text="Aktivitas" />
-                    <TableColumn prefWidth="75.0" text="Tanggal" />
-                    <TableColumn prefWidth="75.0" />
+               <TableColumn fx:id="numberColumn" prefWidth="75.0" text="No" />
+                    <TableColumn fx:id="idColumn" prefWidth="90.39996337890625" text="NIM" />
+                    <TableColumn fx:id="nameColumn" prefWidth="136.00003051757812" text="Mahasiswa" />
+                    <TableColumn fx:id="descriptionColumn" prefWidth="168.800048828125" text="Keterangan" />
+                    <TableColumn fx:id="dateColumn" prefWidth="96.0" text="Tanggal" />
+                    <TableColumn fx:id="actionColumn" prefWidth="64.0" text="Aksi" />
                 </columns>
                 <opaqueInsets>
                     <Insets />
