--- a/src/main/resources/views/adminprodi/permintaan-verif-seluruh.fxml
+++ b/src/main/resources/views/adminprodi/permintaan-verif-seluruh.fxml
@@ -65,12 +65,12 @@
          </HBox>
             <TableView fx:id="tableViewBerkasProdi" VBox.vgrow="ALWAYS">
                 <columns>
-               <TableColumn fx:id="numberColumn" prefWidth="75.0" text="No" />
-                    <TableColumn fx:id="idColumn" prefWidth="90.39996337890625" text="NIM" />
-                    <TableColumn fx:id="nameColumn" prefWidth="136.00003051757812" text="Mahasiswa" />
-                    <TableColumn fx:id="descriptionColumn" prefWidth="168.800048828125" text="Keterangan" />
-                    <TableColumn fx:id="dateColumn" prefWidth="96.0" text="Tanggal" />
-                    <TableColumn fx:id="actionColumn" prefWidth="64.0" text="Aksi" />
+               <TableColumn fx:id="numberColumn" editable="false" prefWidth="75.0" text="No" />
+                    <TableColumn fx:id="idColumn" editable="false" prefWidth="90.39996337890625" text="NIM" />
+                    <TableColumn fx:id="nameColumn" editable="false" prefWidth="136.00003051757812" text="Mahasiswa" />
+                    <TableColumn fx:id="descriptionColumn" editable="false" prefWidth="168.800048828125" sortable="false" text="Keterangan" />
+                    <TableColumn fx:id="dateColumn" editable="false" prefWidth="96.0" text="Tanggal" />
+                    <TableColumn fx:id="actionColumn" editable="false" prefWidth="64.0" sortable="false" text="Aksi" />
                 </columns>
                 <opaqueInsets>
                     <Insets />
@@ -78,9 +78,9 @@
                 <VBox.margin>
                     <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
                 </VBox.margin>
-                <columnResizePolicy>
-                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                </columnResizePolicy>
+            <columnResizePolicy>
+               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
             </TableView>
         </children>
     </VBox>
