--- a/src/main/resources/views/adminjurusan/kelola-data-mahasiswa.fxml
+++ b/src/main/resources/views/adminjurusan/kelola-data-mahasiswa.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.KelolaDataMahasiswaController">
+<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.KelolaDataMahasiswaController">
     <fx:include source="../../components/adminjurusan/sidebar.fxml" />
     <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" style="-fx-cursor: hand;" HBox.hgrow="ALWAYS">
         <children>
@@ -31,13 +36,16 @@
                         <padding>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                         </padding></Button>
-                    <TableView prefHeight="200.0" prefWidth="200.0">
+                    <TableView fx:id="tableViewMahasiswa" prefHeight="200.0" prefWidth="200.0">
                         <columns>
-                            <TableColumn prefWidth="75.0" text="No" />
-                            <TableColumn prefWidth="150.0" text="Nama Lengkap" />
-                            <TableColumn prefWidth="75.0" text="No. telepon" />
-                            <TableColumn prefWidth="150.0" text="Tanggal Bergabung" />
-                            <TableColumn prefWidth="100.0" text="Aksi" />
+                            <TableColumn fx:id="columnNo" prefWidth="75.0" text="No" />
+                            <TableColumn fx:id="columnNim" prefWidth="150.0" text="Nim" />
+                            <TableColumn fx:id="columnNama" prefWidth="75.0" text="Nama Lengkap" />
+                            <TableColumn fx:id="columnPassword" prefWidth="150.0" text="Password" />
+                            <TableColumn fx:id="columnEmail" prefWidth="100.0" text="Email" />
+                     <TableColumn fx:id="columnJurusan" prefWidth="100.0" text="Jurusan" />
+                     <TableColumn fx:id="columnProdi" prefWidth="100.0" text="Prodi" />
+                     <TableColumn fx:id="columnAction" prefWidth="100.0" text="Aksi" />
                         </columns>
                   <columnResizePolicy>
                      <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -52,14 +60,6 @@
                 <VBox.margin>
                     <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                 </VBox.margin>
-                <children>
-                    <Button fx:id="btnEditMhs" mnemonicParsing="false" onAction="#openOverlayEditMahasiswa" prefWidth="50.0" text="Edit">
-                        <HBox.margin>
-                            <Insets right="10.0" />
-                        </HBox.margin>
-                    </Button>
-                    <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#openOverlayHapusMahasiswa" text="Delete" />
-                </children>
             </HBox>
         </children>
     </VBox>
