--- a/src/main/resources/views/adminjurusan/overlay/overlay-tambah-data-mahasiswa.fxml
+++ b/src/main/resources/views/adminjurusan/overlay/overlay-tambah-data-mahasiswa.fxml
@@ -8,25 +8,30 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="overlayTambahMahasiswa" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.overlay.OverlayTambahDataMahasiswa">
     <children>
         <Label text="Nama Lengkap" />
-        <TextField prefHeight="26.0" prefWidth="502.0" />
+        <TextField fx:id="inputNama" prefHeight="26.0" prefWidth="502.0" />
+
         <Label text="NIM" />
-        <TextField />
+        <TextField fx:id="inputNim" prefHeight="26.0" prefWidth="502.0" />
+
         <Label text="Jurusan" />
-      <TextField />
+        <TextField fx:id="inputJurusan" prefHeight="26.0" prefWidth="502.0" />
+
         <Label text="Prodi" />
-        <TextField />
+        <TextField fx:id="inputProdi" prefHeight="26.0" prefWidth="502.0" />
+
         <Label text="Email" />
-        <PasswordField />
+        <TextField fx:id="inputEmail" prefHeight="26.0" prefWidth="502.0" />
+
+        <Label text="Password" />
+        <PasswordField fx:id="inputPassword" prefHeight="26.0" prefWidth="502.0" />
+
         <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
             <children>
-                <Button fx:id="btnTambahkan" alignment="CENTER" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Tambahkan" textFill="WHITE" />
+                <Button fx:id="btnTambahkan" alignment="CENTER" mnemonicParsing="false" onAction="#handleBtnTambahkan" style="-fx-background-color: #052C65;" text="Tambahkan" textFill="WHITE" />
             </children>
-            <VBox.margin>
-                <Insets top="30.0" />
-            </VBox.margin>
         </HBox>
     </children>
     <padding>
