--- a/src/main/resources/views/adminjurusan/overlay/overlay-edit-data-mahasiswa.fxml
+++ b/src/main/resources/views/adminjurusan/overlay/overlay-edit-data-mahasiswa.fxml
@@ -1,30 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" style="-fx-background-color: #F3F7FF;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="overlayEditDataMahasiswa" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" style="-fx-background-color: #F3F7FF;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.overlay.OverlayEditDataMahasiswa">
     <padding>
         <Insets bottom="20.0" left="30.0" right="40.0" top="30.0" />
     </padding>
     <children>
         <Label text="Nama Lengkap" />
-        <TextField text="Aruffin bin Abdul Salam" />
+        <TextField fx:id="editNama" />
         <Label text="NIM" />
-        <TextField text="2341720100" />
+        <TextField fx:id="editNim" />
         <Label text="Jurusan" />
-      <TextField text="Teknologi Informasi" />
+      <TextField fx:id="editJurusan" />
         <Label text="Prodi" />
-        <TextField text="D4-Teknik Informatika" />
+        <TextField fx:id="editProdi" />
         <Label text="Email" />
-      <TextField text="upin@polinema.ac.id" />
+      <TextField fx:id="editEmail" />
+      <Label text="Password" />
+      <PasswordField fx:id="editPassword" />
         <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
             <VBox.margin>
-                <Insets top="30.0" />
+                <Insets top="60.0" />
             </VBox.margin>
             <children>
-                <Button alignment="CENTER" mnemonicParsing="false" prefWidth="45.0" style="-fx-background-color: #052C65;" text="Edit" textFill="WHITE" />
+                <Button fx:id="btnEdit" alignment="CENTER" mnemonicParsing="false" onAction="#updateData" prefWidth="45.0" style="-fx-background-color: #052C65;" text="Edit" textFill="WHITE" />
             </children>
         </HBox>
     </children>
