--- a/src/main/resources/views/adminjurusan/overlay/overlay-tambah-template-surat-baru.fxml
+++ b/src/main/resources/views/adminjurusan/overlay/overlay-tambah-template-surat-baru.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.OverlayTambahTemplateSuratController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.overlay.OverlayTambahTemplateSuratController">
    <children>
       <Label text="Surat">
          <VBox.margin>
@@ -23,15 +23,15 @@
             <Insets top="15.0" />
          </VBox.margin>
       </Label>
-      <TextField fx:id="filePathField" promptText="File path ..." />
-      <Button fx:id="inputFile" mnemonicParsing="false" onAction="#onBrowse" text="Unggah File" textFill="#052c65">
+      <TextField fx:id="inputFilePath" promptText="File path ..." />
+      <Button fx:id="btnFileChooser" mnemonicParsing="false" onAction="#onBrowse" text="Unggah File" textFill="#052c65">
          <font>
             <Font name="Reddit Sans Regular" size="12.0" />
          </font>
       </Button>
       <HBox alignment="CENTER" minHeight="-Infinity" prefHeight="30.0" prefWidth="200.0">
          <children>
-            <Button fx:id="btnTambahkan" alignment="CENTER" mnemonicParsing="false" style="-fx-background-color: #052C65; -fx-cursor: hand;" text="Tambahkan" textFill="WHITE">
+            <Button fx:id="btnTambahkan" alignment="CENTER" mnemonicParsing="false" onAction="#btnTambahkanOnClicked" style="-fx-background-color: #052C65; -fx-cursor: hand;" text="Tambahkan" textFill="WHITE">
                <font>
                   <Font name="Reddit Sans Black" size="12.0" />
                </font>
